cv profile insert data to db

--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -25,7 +25,8 @@
 
             <div class="row">
                 <div class="col-12 mb-3 d-flex justify-content-center">
-                    <img class="rounded-circle" src="/static/images/default-avatar.png" style="width: 180px; height: 180px; object-fit:cover" id="icon-preview">
+                    <img class="rounded-circle" src="/static/images/default-avatar.png"
+                        style="width: 180px; height: 180px; object-fit:cover" id="icon-preview">
                 </div>
 
                 <div class="col-12 mb-3">
@@ -37,7 +38,8 @@
 
                 <div class="col-md-6 mb-3">
                     <label for="firstName">First name</label>
-                    <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value="" required="">
+                    <input type="text" class="form-control" id="fristName" placeholder="Frist Name" value=""
+                        required="">
                     <div class="invalid-feedback">
                         Valid first name is required.
                     </div>
@@ -89,7 +91,8 @@
             <div class="mb-3">
                 <label for="username">About me</label>
                 <div class="input-group">
-                    <textarea type="text" class="form-control skillBox" id="aboutMe" rows="5" placeholder="Description"></textarea>
+                    <textarea type="text" class="form-control skillBox" id="aboutMe" rows="5"
+                        placeholder="Description"></textarea>
 
                 </div>
             </div>
@@ -118,7 +121,8 @@
                 <!-- <h1>Dynamic Fields Javascript</h1> -->
                 <!-- <div class="wrapper"> -->
                 <div id="survey_options">
-                    <input type="text" name="survey_options[]" class="survey_options skillBox" size="50" placeholder="language">
+                    <input type="text" name="survey_options[]" class="survey_options skillBox" size="50"
+                        placeholder="language">
 
                 </div>
                 <div class="controls">
@@ -139,14 +143,29 @@
     </div>
 </div>
 
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script>
+    var delay = 1;
+
+    function delayURL(value) {
+        var t = setTimeout("delayURL('" + value + "')", 1500);
+        if (delay > 0) {
+            console.log(delay)
+            delay--;
+        } else {
+            clearTimeout(t);
+            window.location.href = value;
+        }
+    }
+
+
+
     var base64ImgProfileIcon = '';
     //show edcution input
     for (var i = 0; i < 3; i++) {
         $('#edu').append('<b> <label for="exampleFormControlTextarea1">Education ', [i + 1], '</label></b><div id="add_experience-1"><div class="row"><div class="col-md-6 mb-3"><label for="schoolName">School Name</label><input type="text" class="form-control" id="schoolName" placeholder="School Name" value="" required></div><div class="col-md-6 mb-3"><label for="major">major</label><input type="text" class="form-control" id="major" placeholder="Major" value="" required=""></div></div><div class="row"><div class="col-md-6 mb-3"><label for="startDate">Start date</label><input type="date" class="form-control" style="margin-left: 10px" id="schoolStartDate" name="date"></div><div class="col-md-6 mb-3"><label for="endDate">End date</label><input type="date" class="form-control" id="schoolEndDate" name="date"></div></div</div>')
-            // console.log(i)
+        // console.log(i)
     }
 
     //show experience input
@@ -157,12 +176,12 @@
     function getBase64(file) {
         var reader = new FileReader();
         reader.readAsDataURL(file);
-        reader.onload = function() {
+        reader.onload = function () {
             // console.log(reader.result);
             return reader.result
 
         };
-        reader.onerror = function(error) {
+        reader.onerror = function (error) {
             console.log('Error: ', error);
         };
     }
@@ -172,72 +191,50 @@
 
     function saveCv() {
 
-        var schoolNames = $('input[id^=schoolName]').map(function(idx, elem) {
+        var schoolNames = $('input[id^=schoolName]').map(function (idx, elem) {
 
             return $(elem).val();
         }).get();
         // console.log(schoolNames)
 
-        var majors = $('input[id^=major]').map(function(idx, elem) {
+        var majors = $('input[id^=major]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
         // console.log(majors)
 
-        var schoolStartDates = $('input[id^=schoolStartDate]').map(function(idx, elem) {
+        var schoolStartDates = $('input[id^=schoolStartDate]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
 
-        var schoolEndDates = $('input[id^=schoolEndDate]').map(function(idx, elem) {
+        var schoolEndDates = $('input[id^=schoolEndDate]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
 
 
-        var companyNames = $('input[id^=companyName]').map(function(idx, elem) {
+        var companyNames = $('input[id^=companyName]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
-        var companyStartDates = $('input[id^=companyStartDate]').map(function(idx, elem) {
+        var companyStartDates = $('input[id^=companyStartDate]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
         // console.log(companyStartDate)
 
-        var companyEndDates = $('input[id^=companyEndDate]').map(function(idx, elem) {
+        var companyEndDates = $('input[id^=companyEndDate]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
         // console.log(companyEndDate)
-        var description = $('textarea[id^=description]').map(function(idx, elem) {
+        var description = $('textarea[id^=description]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
 
 
-        var lan = $('input[name^=survey_options]').map(function(idx, elem) {
+        var lan = $('input[name^=survey_options]').map(function (idx, elem) {
             return $(elem).val();
         }).get();
-
-        // console.log(description)
-
-        // var file_data = new FormData()
-        // file_name = $("#profileIcon")[0].files[0]['name'] + $("#profileIcon")[0].files[0]['name'].substr($("#profileIcon")[0].files[0]['name'].length)
-        // console.log(file_name)
-        // console.log($("#profile"))
-
-        /*
-        var file = $("#profileIcon")[0].files[0];
-        var reader = new FileReader();
-
-        reader.onloadend = function() {
-            imagebase64 = reader.result;
-        }
-
-        reader.readAsDataURL(file);
-        console.log(imagebase64)
-        */
-
-        // console.log(getBase64(file))
-
 
         $.ajax({
             url: "/student/create_cvProfile",
@@ -262,14 +259,25 @@
                 language: lan,
             },
             datatype: 'html',
-            success: function(result) {
+            success: function (result) {
                 //On success
-
                 console.log(result)
-                    // console.log(result.status)
+                if (result.status == true) {
+           
+                    Swal.fire({
+                        title: 'Create CV Successful',
+                        text: 'Success',
+                        icon: 'success',
+                        showCancelButton: true,
+                        showDenyButton: false,
+                        showCancelButton: false,
+                        confirmButtonText: 'OK'
+                    })
+                    delayURL("/student/cvRecord")
+                }
 
             },
-            error: function(jqXHR, textStatus, errorThrown) {
+            error: function (jqXHR, textStatus, errorThrown) {
                 alert(jqXHR.responseText);
             }
 
@@ -288,7 +296,7 @@
         let file = $("#profileIcon")[0].files[0]
         const reader = new FileReader()
         reader.readAsDataURL(file)
-        reader.onload = function() {
+        reader.onload = function () {
             const base64String = reader.result
             base64ImgProfileIcon = base64String //global
             $("#icon-preview").attr("src", base64String)
@@ -299,7 +307,7 @@
     var add_more_fields = document.getElementById('add_more_fields');
     var remove_fields = document.getElementById('remove_fields');
 
-    add_more_fields.onclick = function() {
+    add_more_fields.onclick = function () {
         var newField = document.createElement('input');
         newField.setAttribute('type', 'text');
         newField.setAttribute('name', 'survey_options[]');
@@ -309,7 +317,7 @@
         survey_options.appendChild(newField);
     }
 
-    remove_fields.onclick = function() {
+    remove_fields.onclick = function () {
         var input_tags = survey_options.getElementsByTagName('input');
         if (input_tags.length > 1) {
             survey_options.removeChild(input_tags[(input_tags.length) - 1]);
