Temlpate show data and dashboard select template finished

--- a/server/login/templates/login/login.html
+++ b/server/login/templates/login/login.html
@@ -79,7 +79,7 @@
                         showCancelButton: false,
                         confirmButtonText: 'OK'
                     })
-                    delayURL("/login")
+                    delayURL("/student/cvRecord")
                 } else {
                     Swal.fire({
                         title: 'Login',
