--- a/server/manager/templates/manager/student_filter.html
+++ b/server/manager/templates/manager/student_filter.html
@@ -39,7 +39,7 @@
                         <td><a class="btn btn-primary" href="/student/cvRecord?stu_id={{student.student_id}}">View</a>
 
                         </td>
-                        <td> <button class="btn btn-warning" role="button" data-toggle="modal" data-target="#exampleModal">Send</button></td>
+                        <td> <button class="btn btn-warning" role="button" data-toggle="modal" data-target="#exampleModal" onclick="setEmailReceiver('{{student.student_id}}')">Send</button></td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -51,7 +51,7 @@
 
             </table>
             <br>
-            <button class="btn btn-dark" role="button" style="display: block;margin-left: auto;margin-right: auto;" data-toggle="modal" data-target="#exampleModal">Send email to all student</button>
+            <button class="btn btn-dark" role="button" style="display: block;margin-left: auto;margin-right: auto;" data-toggle="modal" data-target="#exampleModal" onclick="setEmailReceiver('all')">Send email to all student</button>
 
 
 
@@ -70,24 +70,26 @@
                 <span aria-hidden="true">&times;</span>
               </button>
                 </div>
-                <div class="modal-body">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="
-                        height: 200px;
-                    "></textarea>
+                <div class="modal-body" style="overflow: auto">
+                    <input type="hidden" id="email-receiver" name="email-receiver">
+                    {% csrf_token %}
+                    <textarea class="form-control" id="email-content" rows="3" style="height: 100%; max-height: 100px"></textarea>
 
                     </textarea>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Send</button>
+                    <button type="button" class="btn btn-primary" id="send-email-btn">Send</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 {% endblock %} {% block javascript %}
 <script>
     $(document).ready(function() {
+        
         $('.menu-toggle').click(function() {
             $('nav').toggleClass('menu')
         })
@@ -108,10 +110,6 @@
         $("#checkAll").click(function() {
             $(".check").prop('checked', $(this).prop('checked'));
         });
-
-
-
-
     })
 
 
@@ -141,6 +139,43 @@
                 html2pdf().from(cv).set(opt).save();
             })
     }
+
+
+
+    function setEmailReceiver(receiver){
+        //receiver can be studnet id or "all"
+        $("#email-receiver").val(receiver)
+    }
+
+    $("#send-email-btn").click(()=>{
+
+        fetch('/manager/send_email_to_student',{
+            method: 'POST',
+            headers: {'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value},
+            body: JSON.stringify({
+                student_id: $("#email-receiver").val(),
+                email_content: conv.makeHtml(simplemde.value())
+            })
+        }).then(response => response.json())
+        .then((json)=>{
+            console.log(json)
+        })
+    })
+    
+    var conv = new showdown.Converter({metadata: true});
+
+    var simplemde = new SimpleMDE({ 
+        element: document.getElementById("email-content"),
+        autoDownloadFontAwesome: false,
+        placeholder: "Type here...",
+        spellChecker: false
+    });
+
+
+
+
+
+
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
