--- a/server/templates/include.html
+++ b/server/templates/include.html
@@ -1,5 +1,5 @@
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-<link href="static/global.css" rel="stylesheet">
+<link href="/static/global.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
   rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
   crossorigin="anonymous">
@@ -16,3 +16,9 @@ crossorigin="anonymous"></script>
 {% comment %} Jquery Datatable {% endcomment %}
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
+
+<script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
+
+<script type="text/javascript" charset="utf8" src="/static/lib/simplemde/simplemde.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/lib/simplemde/simplemde.min.css">
+
