--- a/server/templates/nav_student.html
+++ b/server/templates/nav_student.html
@@ -21,7 +21,7 @@
             <li><a class="dropdown-item" href="/student/cvProfile">Profile</a></li>
             <li><a class="dropdown-item" href="/student/cvRecord">My CV templates</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="/logout">Logout</a></li>
           </ul>
         </li>
       </ul>
