--- a/server/student/templates/student/cvRecord.html
+++ b/server/student/templates/student/cvRecord.html
@@ -8,6 +8,7 @@
     <img class="round" src="{{cv.profileIcon}}" alt="user" style="width: 100px ;height: 100px; object-fit:cover" /> {% endif %}
     <h3>{{cv.cvname}}</h3>
     <h6>{{cv.fristName}} {{cv.lastName}} ({{cv.nickName}})</h6>
+    <h6> {{cv.cvName}}</h6>
     <!-- <p style="text-align: justify;padding-left: 20px;padding-right: 20px;">{{cv.aboutMe}}</p> -->
     <div class="buttons" style="padding-bottom: 15px;">
         <button class="primary">
