--- a/server/student/templates/student/cv-version-2.html
+++ b/server/student/templates/student/cv-version-2.html
@@ -24,12 +24,12 @@
                 <p> {{cvBasic.aboutMe}} </p>
 
                 <br/>
-                <h1>Award</h1>
+                <!-- <h1>Award</h1>
                 <p><span style="color:white">Lorem Ipsum </span>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
                     <br/><br/>
                     <span style="color:white">text ever </span> the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 
-                </p>
+                </p> -->
                 <br/>
                 <h1>Contact</h1>
 
@@ -63,7 +63,7 @@
                 <hr class="hr2" />
                 <div class="clearfix"></div>
                 {% for exp in experience %}
-                <p class="para-1">{{exp.companyName}} <strong>[{{exp.start_date}} - {{exp.end_date}}]</strong></p>
+                <p class="para-1">{{exp.companyName}} <br><strong>[{{exp.start_date}} - {{exp.end_date}}]</strong></p>
                 <p class="para-21">{{exp.description}}</p>
                 {% endfor %}
                 <!-- <p class="para-1">UI Designer <strong>(2013 - 2015)</strong></p>
@@ -79,7 +79,7 @@
                 <hr class="hr2" />
                 <div class="clearfix"></div>
                 {% for edu in education %}
-                <p class="para-1">{{edu.shcoolName}} <strong>[{{edu.start_date}} - {{edu.end_date}}]</strong></p>
+                <p class="para-1">{{edu.shcoolName}} <br><strong>[{{edu.start_date}} - {{edu.end_date}}]</strong></p>
                 <p class="para-21">Major: {{edu.major}}</p>
                 {% endfor %}
                 <!-- <p class="para-1">Bachelor of Computer Application <strong>(2013 - 2015)</strong></p>
