--- a/server/templates/nav_student.html
+++ b/server/templates/nav_student.html
@@ -19,7 +19,7 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark" style="position:absolute">
             <li><a class="dropdown-item" href="/student/cvProfile">Profile</a></li>
-            <li><a class="dropdown-item" href="/student/cvRecord">My CV templates</a></li>
+            <li><a class="dropdown-item" href="/student/cvRecord">My CV Records</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/logout">Logout</a></li>
           </ul>
