--- a/server/templates/include.html
+++ b/server/templates/include.html
@@ -22,3 +22,5 @@ crossorigin="anonymous"></script>
 <script type="text/javascript" charset="utf8" src="/static/lib/simplemde/simplemde.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/lib/simplemde/simplemde.min.css">
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
